# python-crash-test

./: .gitignore  0001-bpo-45022-Pin-current-libffi-build-to-fixed-version-.patch  README.md  test.sh
.github/workflows/: main.yml
project/: meson.build  my-executable.c  my-shared-lib.c
